sbml: Add biomass reaction definitions for undetected models
This adds the `biomass` key in model.yaml for those SBML models where the
biomass could not be automatically identified.

--- a/sbml/iRsp1095/model.yaml
+++ b/sbml/iRsp1095/model.yaml
@@ -1,4 +1,5 @@
 name: Rhodobacter_sphaeroides_metabolic_model_iRsp1095
+biomass: RXN1391
 default_flux_limit: 1000.0
 compounds:
 - include: compounds.yaml
