sbml/iMA871: Add model corrections

--- a/sbml/iMA871/reactions.yaml
+++ b/sbml/iMA871/reactions.yaml
@@ -5217,7 +5217,7 @@
   equation: '|E_482[C_c]| + |E_619[C_c]| => |Cx_2[C_c]|'
 - id: R_comp20
   name: 53574, 53574, 54890
-  equation: '|E_13[C_c]| + |E_13[C_c]| + |E_609[C_c]| => |Cx_20[C_c]|'
+  equation: '|E_13[C_c]| + |E_609[C_c]| => |Cx_20[C_c]|'
 - id: R_comp21
   name: 55510, 209315, 125186
   equation: '|E_5[C_c]| + |E_459[C_c]| + |E_603[C_c]| => |Cx_21[C_c]|'
@@ -5229,7 +5229,7 @@
   equation: '|E_11[C_c]| + |E_464[C_c]| => |Cx_3[C_c]|'
 - id: R_comp4
   name: 176118, 176118
-  equation: '|E_3[C_c]| + |E_3[C_c]| => |Cx_4[C_c]|'
+  equation: '|E_3[C_c]| => |Cx_4[C_c]|'
 - id: R_comp5
   name: 189424, 43578, 210021
   equation: '|E_15[C_c]| + |E_467[C_c]| + |E_611[C_c]| => |Cx_5[C_c]|'
@@ -5243,7 +5243,7 @@
     |Cx_6[C_c]|'
 - id: R_comp7
   name: 201642, 201642, 130857, 55637, 40064
-  equation: '|E_4[C_c]| + |E_4[C_c]| + |E_602[C_c]| + |E_672[C_c]| + |E_717[C_c]|
+  equation: '|E_4[C_c]| + |E_602[C_c]| + |E_672[C_c]| + |E_717[C_c]|
     => |Cx_7[C_c]|'
 - id: R_comp8
   name: 205553, 205959, 57369, 177548, 211145
