iJN746: Fixed mislabled cardiolipin (clpn) compounds in biomass equation

--- a/sbml/iJN746/reactions.yaml
+++ b/sbml/iJN746/reactions.yaml
@@ -851,8 +851,9 @@
     + (0.035) |M_ptrc_c[C_c]| + (0.205) |M_ser_DASH_L_c[C_c]| + (0.0005) |M_sheme_c[C_c]|
     + (0.000003) |M_succoa_c[C_c]| + (0.241) |M_thr_DASH_L_c[C_c]| + (0.054) |M_trp_DASH_L_c[C_c]|
     + (0.131) |M_tyr_DASH_L_c[C_c]| + (0.003) |M_udpg_c[C_c]| + (0.136) |M_utp_c[C_c]|
-    + (0.402) |M_val_DASH_L_c[C_c]| => (45.5608) |M_adp_c[C_c]| + (45.56035) |M_h_c[C_c]|
-    + (45.5628) |M_pi_c[C_c]| + (0.7302) |M_ppi_c[C_c]|
+    + (0.402) |M_val_DASH_L_c[C_c]| + (0.0005) |M_clpn120_p[C_p]| + (0.0005) |M_clpn160_p[C_p]|
+    + (0.0005) |M_clpn161_p[C_p]| + (0.0005) |M_clpn180_p[C_p]| + (0.0005) |M_clpn181_p[C_p]|
+     => (45.5608) |M_adp_c[C_c]| + (45.56035) |M_h_c[C_c]| + (45.5628) |M_pi_c[C_c]| + (0.7302) |M_ppi_c[C_c]|
 - id: R_CACOAHA
   name: Enoyl-CoA hydratase/aldolase
   equation: '|M_caffcoa_c[C_c]| + |M_h2o_c[C_c]| => |M_34dhbald_c[C_c]| + |M_accoa_c[C_c]|'
