Imported new version of iSyn731
Imported new version from
http://www.maranasgroup.com/submission_models/synechocystis_iSyn731.htm
downloaded 2015-10-05.

--- a/sbml/iSyn731/medium.yaml
+++ b/sbml/iSyn731/medium.yaml
@@ -1,138 +1,186 @@
 name: Default medium
 compartment: e
 compounds:
-- id: cpd02791_c
+- id: M_cpd02791_c
   compartment: c
-  reaction: DM_5mdru1p
+  reaction: R_DM_5mdru1p
   lower: 0.0
-- id: cmpd_PHB_c
+- id: M_cmpd_PHB_c
   compartment: c
-  reaction: DM_PHB
+  reaction: R_DM_PHB
   lower: 0.0
-- id: cpd12223_c
+- id: M_cpd12223_c
   compartment: c
-  reaction: DM_dna5mtc
+  reaction: R_DM_dna5mtc
   lower: 0.0
-- id: cpd00024_e
-  reaction: EX_2_Oxoglutarate
-- id: cpd00136_e
-  reaction: EX_4_Hydroxybenzoate
-- id: cpd00029_e
-  reaction: EX_Acetate
-- id: cpd01048_e
-  reaction: EX_Arsenic_acid
-- id: cpd04098_e
-  reaction: EX_Arsenite
-- id: cpd11416_e
-  reaction: EX_Biomass
-- id: cpd00104_e
-  reaction: EX_Biotin
-- id: cpd00011_e
-  reaction: EX_CO2
-- id: cpd00063_e
-  reaction: EX_Calcium
-- id: cpd00204_e
-  reaction: EX_CarbonMonoxide
-- id: cpd00137_e
-  reaction: EX_Citrate
-- id: cpd00149_e
-  reaction: EX_Co2
-- id: cpd00058_e
-  reaction: EX_Cu2
-- id: cpd01015_e
-  reaction: EX_Cyanate
-- id: cpd00082_e
-  reaction: EX_D_Fructose
-- id: cpd10515_e
-  reaction: EX_Fe2
-- id: cpd10516_e
-  reaction: EX_Fe3
-- id: cpd00106_e
-  reaction: EX_Fumarate
-- id: cpd08376_e
-  reaction: EX_Glcglyc
-- id: cpd00027_e
-  reaction: EX_Glucose
-- id: cpd00033_e
-  reaction: EX_Glycine
-- id: cpd00155_e
-  reaction: EX_Glycogen
-- id: cpd00067_e
-  reaction: EX_H
-- id: cpd11640_e
-  reaction: EX_H2
-- id: cpd00242_e
-  reaction: EX_H2CO3
-- id: cpd00001_e
-  reaction: EX_H2O
-- id: cpd16336_e
-  reaction: EX_Isoprene
-- id: cpd00035_e
-  reaction: EX_L_Alanine
-- id: cpd00051_e
-  reaction: EX_L_Arginine
-- id: cpd00023_e
-  reaction: EX_L_Glutamate
-- id: cpd00053_e
-  reaction: EX_L_Glutamine
-- id: cpd00119_e
-  reaction: EX_L_Histidine
-- id: cpd00107_e
-  reaction: EX_L_Leucine
-- id: cpd00039_e
-  reaction: EX_L_Lysine
-- id: cpd00130_e
-  reaction: EX_L_Malate
-- id: cpd00129_e
-  reaction: EX_L_Proline
-- id: cpd00054_e
-  reaction: EX_L_Serine
-- id: cpd00254_e
-  reaction: EX_Mg
-- id: cpd00030_e
-  reaction: EX_Mn2
-- id: cpd11574_e
-  reaction: EX_Molybdate
-- id: cpd00013_e
-  reaction: EX_NH3
-- id: cpd00244_e
-  reaction: EX_Nickel
-- id: cpd00209_e
-  reaction: EX_Nitrate
-- id: cpd00007_e
-  reaction: EX_O2
-- id: hvphoton1_e
-  reaction: EX_PHO1
-- id: hvphoton2_e
-  reaction: EX_PHO2
-- id: cpd00009_e
-  reaction: EX_Phosphate
-- id: cpd00205_e
-  reaction: EX_Potassium
-- id: cpd00118_e
-  reaction: EX_Putrescine
-- id: cpd00020_e
-  reaction: EX_Pyruvate
-- id: cpd00971_e
-  reaction: EX_Sodium
-- id: cpd00264_e
-  reaction: EX_Spermidine
-- id: cpd00036_e
-  reaction: EX_Succinate
-- id: cpd00076_e
-  reaction: EX_Sucrose
-- id: cpd00048_e
-  reaction: EX_Sulfate
-- id: cpd00073_e
-  reaction: EX_Urea
-- id: cpd00034_e
-  reaction: EX_Zinc
-- id: cpd11461_c
+- id: M_cpd00024_e
+  reaction: R_EX_2_DASH_Oxoglutarate
+  lower: 0.0
+- id: M_cpd00029_e
+  reaction: R_EX_Acetate
+  lower: 0.0
+- id: M_cpd11416_e
+  reaction: R_EX_Biomass
+  lower: 0.0
+- id: M_cpd00011_e
+  reaction: R_EX_CO2
+  lower: -100.0
+- id: M_cpd00063_e
+  reaction: R_EX_Calcium
+  lower: -100.0
+- id: M_cpd00204_e
+  reaction: R_EX_CarbonMonoxide
+  lower: 0.0
+- id: M_cpd00137_e
+  reaction: R_EX_Citrate
+  lower: 0.0
+- id: M_cpd00149_e
+  reaction: R_EX_Co2_
+  lower: -100.0
+- id: M_cpd00058_e
+  reaction: R_EX_Cu2_
+  lower: -100.0
+- id: M_cpd01015_e
+  reaction: R_EX_Cyanate
+  lower: 0.0
+- id: M_cpd00082_e
+  reaction: R_EX_D_DASH_Fructose
+  lower: 0.0
+- id: M_cpd10515_e
+  reaction: R_EX_Fe2_
+  lower: -100.0
+- id: M_cpd10516_e
+  reaction: R_EX_Fe3_
+  lower: -100.0
+- id: M_cpd00106_e
+  reaction: R_EX_Fumarate
+  lower: 0.0
+- id: M_cpd08376_e
+  reaction: R_EX_Glcglyc
+  lower: 0.0
+- id: M_cpd00027_e
+  reaction: R_EX_Glucose
+  lower: 0.0
+- id: M_cpd00155_e
+  reaction: R_EX_Glycogen
+  lower: 0.0
+- id: M_cpd11640_e
+  reaction: R_EX_H2
+  lower: 0.0
+- id: M_cpd00242_e
+  reaction: R_EX_H2CO3
+  lower: -100.0
+- id: M_cpd00001_e
+  reaction: R_EX_H2O
+  lower: -100.0
+- id: M_cpd00067_e
+  reaction: R_EX_H_
+  lower: -100.0
+- id: M_cpd16336_e
+  reaction: R_EX_Isoprene
+  lower: 0.0
+- id: M_cpd00035_e
+  reaction: R_EX_L_DASH_Alanine
+  lower: 0.0
+- id: M_cpd00051_e
+  reaction: R_EX_L_DASH_Arginine
+  lower: 0.0
+- id: M_cpd00023_e
+  reaction: R_EX_L_DASH_Glutamate
+  lower: 0.0
+- id: M_cpd00053_e
+  reaction: R_EX_L_DASH_Glutamine
+  lower: 0.0
+- id: M_cpd00119_e
+  reaction: R_EX_L_DASH_Histidine
+  lower: 0.0
+- id: M_cpd00107_e
+  reaction: R_EX_L_DASH_Leucine
+  lower: 0.0
+- id: M_cpd00039_e
+  reaction: R_EX_L_DASH_Lysine
+  lower: 0.0
+- id: M_cpd00130_e
+  reaction: R_EX_L_DASH_Malate
+  lower: 0.0
+- id: M_cpd00129_e
+  reaction: R_EX_L_DASH_Proline
+  lower: 0.0
+- id: M_cpd00054_e
+  reaction: R_EX_L_DASH_Serine
+  lower: 0.0
+- id: M_cpd00254_e
+  reaction: R_EX_Mg
+  lower: -100.0
+- id: M_cpd00030_e
+  reaction: R_EX_Mn2_
+  lower: -100.0
+- id: M_cpd11574_e
+  reaction: R_EX_Molybdate
+  lower: -100.0
+- id: M_cpd00013_e
+  reaction: R_EX_NH3
+  lower: -100.0
+- id: M_cpd00244_e
+  reaction: R_EX_Nickel
+  lower: -100.0
+- id: M_cpd00209_e
+  reaction: R_EX_Nitrate
+  lower: -100.0
+- id: M_cpd00007_e
+  reaction: R_EX_O2
+  lower: 0.0
+- id: M_hvphoton1_e
+  reaction: R_EX_PHO1
+  lower: -100.0
+- id: M_hvphoton2_e
+  reaction: R_EX_PHO2
+  lower: -100.0
+- id: M_cpd00009_e
+  reaction: R_EX_Phosphate
+  lower: -100.0
+- id: M_cpd00205_e
+  reaction: R_EX_Potassium
+  lower: -100.0
+- id: M_cpd00118_e
+  reaction: R_EX_Putrescine
+  lower: 0.0
+- id: M_cpd00020_e
+  reaction: R_EX_Pyruvate
+  lower: 0.0
+- id: M_cpd00971_e
+  reaction: R_EX_Sodium
+  lower: -100.0
+- id: M_cpd00264_e
+  reaction: R_EX_Spermidine
+  lower: 0.0
+- id: M_cpd00036_e
+  reaction: R_EX_Succinate
+  lower: 0.0
+- id: M_cpd00076_e
+  reaction: R_EX_Sucrose
+  lower: 0.0
+- id: M_cpd00048_e
+  reaction: R_EX_Sulfate
+  lower: -100.0
+- id: M_cpd00073_e
+  reaction: R_EX_Urea
+  lower: 0.0
+- id: M_cpd00034_e
+  reaction: R_EX_Zinc
+  lower: -100.0
+- id: M_cpd02234_e
+  reaction: R_EX_phb
+  lower: 0.0
+- id: M_cpd01250_e
+  reaction: R_Ex_hep
+  lower: 0.0
+- id: M_cpd11461_c
   compartment: c
-  reaction: Sink_dna
-- id: cpd_phbg_c
+  reaction: R_Sink_dna
+- id: M_cpd_phbg_c
   compartment: c
-  reaction: Sink_phbg
-- id: cpd03423_c
+  reaction: R_Sink_phbg
+- id: M_cpd03423_c
   compartment: c
-  reaction: Sink_rdmbzi
+  reaction: R_Sink_rdmbzi
