Add copyright notice to new iSyn731 model

--- a/sbml/iSyn731/model.yaml
+++ b/sbml/iSyn731/model.yaml
@@ -1,3 +1,17 @@
+# Based on SBML model downloaded from
+# <http://www.maranasgroup.com/submission_models/synechocystis_iSyn731.htm> on
+# 2015-10-05.
+#
+# Saha, R., Verseput, A.T., Berla, B.M., Mueller, T.J., Pakrasi, H.B. and
+# Maranas, C.D. (2012), "Reconstruction and comparison of the metabolic
+# potential of cyanobacteriaCyanothece sp. ATCC 51142 and Synechocystis sp.
+# PCC 6803," PLoS ONE, 7(10):e48285.
+#
+# The model is licensed under a Creative Commons Attribution License
+# <http://creativecommons.org/licenses/by/2.5/>, which permits unrestricted
+# use, distribution, and reproduction in any medium, provided the original
+# author and source are credited.
+
 name: SBML
 biomass: R_Ec_biomass_SynAuto
 default_flux_limit: 1000.0
