--- a/sbml/iSyn731/compounds.yaml
+++ b/sbml/iSyn731/compounds.yaml
@@ -26,13 +26,13 @@
   name: Sulfoquinovosyldiacylglycerol (n-C18_3)
   charge: -1
 - id: c_12dgr181_9_c
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-9-enoyl, n-C18_1)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-9-enoyl, n-C18_1)
   charge: 0
 - id: c_12dgr183_6_9_12_c
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-trienoyl, n-C18_3)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-trienoyl, n-C18_3)
   charge: 0
 - id: c_12dgr184_6_9_12_15_c
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
   charge: 0
 - id: c_1odec691215eg3p_c
   name: 1-octadec-6-9-12-15-tetraenoyl-sn-glycerol 3-phosphate
@@ -41,7 +41,7 @@
   name: 1-octadec-6-9-12trienoyl-sn-glycerol 3-phosphate
   charge: -2
 - id: c_1odec9eg3p_c
-  name: 1-octadec-9-enoyl-sn-glycerol 3-phosphate
+  name: 1-octadec-9-enoyl-sn-glycerol3-phosphate
   charge: -2
 - id: c_DLiG3P_c
   name: 1,2-dioctadec-9-12-dienoyl-sn-glycerol 3-phosphate
@@ -538,9 +538,6 @@
 - id: cpd00104_c
   name: Biotin
   charge: -1
-- id: cpd00104_e
-  name: Biotin
-  charge: -1
 - id: cpd00105_c
   name: D-Ribose
   charge: 0
@@ -647,9 +644,6 @@
   name: Homocysteine
   charge: 0
 - id: cpd00136_c
-  name: 4-Hydroxybenzoate
-  charge: -1
-- id: cpd00136_e
   name: 4-Hydroxybenzoate
   charge: -1
 - id: cpd00137_c
@@ -1192,6 +1186,15 @@
 - id: cpd00525_c
   name: UDP-N-acetylmuramoyl-L-alanyl-D-glutamate
   charge: -4
+- id: cpd00528_c
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_e
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_p
+  name: Nitrogen
+  charge: 0
 - id: cpd00533_c
   name: dCDP
   charge: -2
@@ -1444,9 +1447,6 @@
 - id: cpd01048_c
   name: Arsenate
   charge: -2
-- id: cpd01048_e
-  name: Arsenate
-  charge: -2
 - id: cpd01080_c
   name: octadecanoate (n-C18_0)
   charge: -1
@@ -1459,6 +1459,12 @@
 - id: cpd01155_c
   name: Cadaverine
   charge: 2
+- id: cpd01174_c
+  name: Glyceollin
+  charge: 0
+- id: cpd01174_p
+  name: Glyceollin
+  charge: 0
 - id: cpd01211_c
   name: Thiocyanate
   charge: -1
@@ -1566,6 +1572,9 @@
   charge: -1
 - id: cpd01844_c
   name: Propionyl phosphate
+  charge: -1
+- id: cpd01855_c
+  name: Xylitol 5-phosphate
   charge: -1
 - id: cpd01881_c
   name: 3-Indoleacetonitrile
@@ -2035,12 +2044,6 @@
 - id: cpd04098_c
   name: Arsenite
   charge: 0
-- id: cpd04098_e
-  name: Arsenite
-  charge: 0
-- id: cpd04098_p
-  name: Arsenite
-  charge: 0
 - id: cpd05235_c
   name: tetracosanoate
   charge: -1
@@ -2158,6 +2161,9 @@
 - id: cpd11225_c
   name: 3-4-dihydroxy-2-butanone4-phosphate
   charge: -1
+- id: cpd11312_c
+  name: Heme A
+  charge: -2
 - id: cpd11313_c
   name: hemeO
   charge: -2
@@ -2305,9 +2311,6 @@
 - id: cpd11830_c
   name: S-Aminomethyldihydrolipoylprotein
   charge: 1
-- id: cpd11836_c
-  name: (R)-3-Hydroxyacyl-[acyl-carrier protein]
-  charge: -1
 - id: cpd11906_c
   name: tRNA(Ala)
   charge: 0
@@ -2869,8 +2872,8 @@
   name: Phosphatidylglycerophosphate (dioctadec-9-enoyl, n-C18_1)
   charge: -3
 - id: cpdR_D_D_c
-  name: Cyanophycin monomer with aspartate
-  charge: 1
+  name: MetcpdR_D_D_c
+  charge: 0
 - id: cpd_msbq_c
   name: 2-methyl-6-solanyl-1,4-benzoquinone
   charge: 0
