Mark zeromass compounds

--- a/sbml/iCce806/compounds.yaml
+++ b/sbml/iCce806/compounds.yaml
@@ -1459,9 +1459,11 @@
 - id: m_photon_psi_e
   name: Photosystem_I_photon__X
   charge: 0
+  zeromass: yes
 - id: m_photon_psii_e
   name: Photosystem_II_photon__X
   charge: 0
+  zeromass: yes
 - id: m_phpyr_c
   name: Phenylpyruvate__C9H7O3
   charge: -1
