--- a/sbml/iRC1080/compounds.yaml
+++ b/sbml/iRC1080/compounds.yaml
@@ -3679,22 +3679,31 @@
   formula: C4H8NO6P
 - id: M_photon298_c
   name: photon (281 to 306 nm, UVB)
+  zeromass: yes
 - id: M_photon437_u
   name: photon (406 to 454 nm, indigo/blue)
+  zeromass: yes
 - id: M_photon438_u
   name: photon (378 to 482 nm, violet/blue)
+  zeromass: yes
 - id: M_photon450_h
   name: photon (417 to 472 nm, indigo/blue)
+  zeromass: yes
 - id: M_photon490_s
   name: photon (451 to 526 nm, blue/green)
+  zeromass: yes
 - id: M_photon646_h
   name: photon (608 to 666 nm, orange/red)
+  zeromass: yes
 - id: M_photon673_u
   name: photon (659 to 684 nm, red)
+  zeromass: yes
 - id: M_photon680_u
   name: photon (662 to 691 nm, red)
+  zeromass: yes
 - id: M_photonVis_e
   name: photon (380 to 750 nm, visible spectrum)
+  zeromass: yes
 - id: M_phphbda_h
   name: Pheophorbide a
 - id: M_phphtna_u
