--- a/sbml/iRS1563/compounds.yaml
+++ b/sbml/iRS1563/compounds.yaml
@@ -6246,9 +6246,11 @@
 - id: M_hvi_c
   name: hv_input
   charge: 0
+  zeromass: yes
 - id: M_hvo_c
   name: hv_output
   charge: 0
+  zeromass: yes
 - id: M_product_c
   name: product[c]
   charge: 0
