--- a/sbml/iRsp1095/compounds.yaml
+++ b/sbml/iRsp1095/compounds.yaml
@@ -2011,6 +2011,7 @@
 - id: CPD0787
   name: Photon
   charge: 0
+  zeromass: yes
 - id: CPD0788
   name: L-Arginine[p]
   charge: 1
@@ -3139,6 +3140,7 @@
 - id: CPD1214
   name: Photon[e]
   charge: 0
+  zeromass: yes
 - id: CPD1215
   name: Dimethylsulfoxide[p]
   charge: 0
