--- a/sbml/iSyn669/compounds.yaml
+++ b/sbml/iSyn669/compounds.yaml
@@ -1412,8 +1412,10 @@
   name: phosphoribulosylformimino-AICAR-P
 - id: M_photonII_c
   name: photonII
+  zeromass: yes
 - id: M_photonI_c
   name: photonI
+  zeromass: yes
 - id: M_phylloquinone_c
   name: phylloquinone
 - id: M_phytoene_c
