--- a/sbml/iSyn731/compounds.yaml
+++ b/sbml/iSyn731/compounds.yaml
@@ -2913,21 +2913,27 @@
 - id: hvphoton1_c
   name: Photosystem 1 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton1_e
   name: Photosystem 1 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton1_p
   name: Photosystem 1 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton2_c
   name: Photosystem 2 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton2_e
   name: Photosystem 2 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton2_p
   name: Photosystem 2 photon
   charge: 0
+  zeromass: yes
 - id: mgdg181_c
   name: 1,2-Diacyl-3-beta-D-galactosyl-sn-glycerol (n-C18_1)
   charge: 0
