--- a/sbml/iJN678/compounds.yaml
+++ b/sbml/iJN678/compounds.yaml
@@ -2427,14 +2427,17 @@
   name: Photon
   formula: Z
   charge: 0
+  zeromass: yes
 - id: M_photon_e
   name: Photon
   formula: Z
   charge: 0
+  zeromass: yes
 - id: M_photon_p
   name: Photon
   formula: Z
   charge: 0
+  zeromass: yes
 - id: M_phpyr_c
   name: Phenylpyruvate
   formula: C9H7O3
