recon2: Mark proton-gradient pseudo-compounds as zero-mass

--- a/sbml/recon2/compounds.yaml
+++ b/sbml/recon2/compounds.yaml
@@ -7859,9 +7859,11 @@
 - id: M_HC02115_c
   name: Proton-gradient
   charge: 0
+  zeromass: yes
 - id: M_HC02115_m
   name: Proton-gradient
   charge: 0
+  zeromass: yes
 - id: M_HC02116_c
   name: activated-sulphur
   charge: 0
