RECON1: Fix stoichiometric balance of UNK2 reaction

--- a/sbml/RECON1/reactions.yaml
+++ b/sbml/RECON1/reactions.yaml
@@ -10742,7 +10742,8 @@
   equation: '|M_atp_n[n]| + |M_ump_n[n]| <=> |M_adp_n[n]| + |M_udp_n[n]|'
 - id: R_UNK2
   name: UNK2
-  equation: '|M_2kmb_c[c]| + |M_gln__L_c[c]| + |M_h_c[c]| => |M_glu__L_c[c]| + |M_met__L_c[c]|'
+  equation: '|M_2kmb_c[c]| + |M_gln__L_c[c]| + (2) |M_h_c[c]| =>
+    |M_glu__L_c[c]| + |M_met__L_c[c]|'
 - id: R_UNK3
   name: 2-keto-4-methylthiobutyrate transamination
   equation: '|M_2kmb_c[c]| + |M_glu__L_c[c]| => |M_akg_c[c]| + |M_met__L_c[c]|'
